<resources>
    <string name="app_name">SamsungProject</string>
    <string name="logo">LOGO</string>
    <string name="name_app">RAPIDITY</string>
    <string name="enter_email">Введите почту</string>
    <string name="enter_password">Введите пароль</string>
    <string name="password_display">password_display</string>
    <string name="enter">Войти</string>
    <string name="recover_password">Восстановить пароль</string>
    <string name="registrate">Зарегистрироваться</string>
    <string name="recover">Восстановить</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nicknameOrSurnamewithname">Введите никнейм или фамилию с именем</string>
    <string name="profile">Профиль</string>
    <string name="feedback">Обратная связь</string>
    <string name="aboutApp">О приложении</string>
    <string name="settings">Настройки</string>

    <string name="changePassword">Поменять пароль</string>
    <string name="nickname">Никнейм или ФИО</string>
    <string name="fullname">Фамилия и имя</string>
    <string name="save">Сохранить</string>
    <string name="changepassword">Сменить пароль</string>
    <string name="enter_new_password">Введите новый пароль</string>

    <string-array name="languages">
        <item>Русский</item>
    </string-array>
</resources>